# os_type

./: .appveyor.yml  .travis.yml  CONTRIBUTING.md  Cargo.toml  Changelog.md  README.md
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: rust.yml
examples/: os_type.rs
src/: android_release.rs  lib.rs  lsb_release.rs  ns_operating_system.rs  os_information.rs  os_release.rs  rhel_release.rs  sw_vers.rs  uname.rs  utils.rs  windows_registry.rs  windows_ver.rs
src/os_information/: lsb_release.rs  mod.rs  os_release.rs  rhel_release.rs  sw_vers.rs  uname.rs  windows_registry.rs
tests/: lsb_release_test.rs  sw_vers_test.rs  windows_ver_test.rs
