[package]
name = "os_type"
version = "2.6.0"
authors = ["Jan Schulte <janschulte@fastmail.com>"]
license = "MIT"
description = "Detect the operating system type"
repository = "https://github.com/schultyy/os_type"

[dependencies]
regex = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.51"

[[example]]
name = "os_type"
